<resources>
    <string name="app_name">Portfolio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="movie_authors">Movie Authors :</string>
    <string name="movie_name">Movie Name :</string>
    <string name="sample_text">Sample Text</string>
    <string name="imdb_voting">Imdb Voting :</string>
    <string name="movie_actors">Movie Actors</string>
    <string name="release">Release :</string>
    <string name="imdb_rating">Imdb Rating :</string>
</resources>